Fix layout issues on mobile

--- a/src/styles/components/_warband-member-edit.scss
+++ b/src/styles/components/_warband-member-edit.scss
@@ -1,3 +1,4 @@
 .equipment-dropdown {
-  min-width: 20rem;
+  width: 20rem;
+  max-width: 100%;
 }
